# Cache

./: CMakeLists.txt  README.md  file_test.txt  main.cpp  makefile  readme.md  test_big_data.cpp  tests.txt
include/: cache.hpp  ideal_cache.hpp  tests.hpp
src/: cache.cpp  cash.cpp  ideal_cache.cpp  test_big_data.cpp  tests.cpp
